Avoid tight wrapping text around match/team choosers
This also generalises and improves how these are positioned and
the margins assigned to them.

--- a/_sass/comp/common.scss
+++ b/_sass/comp/common.scss
@@ -133,3 +133,20 @@ ul.comp-nav {
     }
   }
 }
+
+.floated-chooser {
+  float: right;
+  margin-left: 25px;
+  margin-bottom: 1em;
+
+  & > :last-child {
+    margin-bottom: 0;
+  }
+
+  & + * {
+    clear: both;
+    @include media-query("small") {
+      clear: none;
+    }
+  }
+}
